# goit-algo2-hw-07

./: pyproject.toml  task_1.py  task_2.py
