[project]
name = "goit-algo2-hw-07"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Dmytriiev",email = "sysqwerty1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
